# phd_cand_calculations

./: .gitignore  Cargo.toml  docker-compose.yml  log_100_2024-10-24_22:00.csv
matrices/: a280-0_10_10.npy  a280-0_11_11.npy  a280-0_12_12.npy  a280-0_13_13.npy  a280-0_14_14.npy  a280-0_15_15.npy  a280-0_16_16.npy  a280-0_17_17.npy  a280-0_18_18.npy  a280-0_19_19.npy  a280-100_110_10.npy  a280-100_111_11.npy  a280-100_112_12.npy  a280-100_113_13.npy  a280-100_114_14.npy  a280-100_115_15.npy  a280-100_116_16.npy  a280-100_117_17.npy  a280-100_118_18.npy  a280-100_119_19.npy  a280-105_115_10.npy  a280-105_116_11.npy  a280-105_117_12.npy  a280-105_118_13.npy  a280-105_119_14.npy  a280-105_120_15.npy  a280-105_121_16.npy  a280-105_122_17.npy  a280-105_123_18.npy  a280-105_124_19.npy  a280-10_20_10.npy  a280-10_21_11.npy  a280-10_22_12.npy  a280-10_23_13.npy  a280-10_24_14.npy  a280-10_25_15.npy  a280-10_26_16.npy  a280-10_27_17.npy  a280-10_28_18.npy  a280-10_29_19.npy  (+227108 more)
src/: console_log.rs  dataset.rs  file_opener.rs  main.rs  mod.rs  types.rs
src/classes/: algorithm_params.rs  algorithms.rs  mod.rs  run_algo.rs
