[package]
name = "phd-cand-calculations"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
csv = "1.1"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
lazy_static = "1.4"
phd_cand_algorithms = { path = "../phd-cand" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.0.0"
